<resources>
    <string name="app_name">Hang Man</string>
    <string name="hang_man">Hang Man: Mutant Edition!</string>
    <string name="start">Start</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="f">F</string>
    <string name="h">H</string>
    <string name="s">S</string>
    <string name="g">G</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="d">D</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="guess_the_phrase">Guess The Phrase</string>
    <string name="placeholder">placeHolder</string>
    <string name="start_game">Begin Game</string>
    <string name="chickenTest">Running away are we?</string>
    <string name="title">You sure? Only noobs give up</string>
    <string name="yes">Yes, I R Noob</string>
    <string name="no">No, Hit me again</string>
    <string name = "newGameTitle">Play Again?</string>
    <string name = "newGameMessage">You know you want to.  Doooo it</string>
    <string name = "newGameYes">Yes, boss</string>
    <string name = "newGameNo">No, I am deleting this app</string>
    <string name="channel_name">hangman channel</string>

</resources>
